syntax = "proto3";

option csharp_namespace="RockShop.Grpc.Service";

package jukebox;

service jukebox{
    rpc GetArtists(ArtistRequest) returns (ArtistReply);
}

message ArtistRequest{
    int32 pageNumber = 1;
}

message ArtistReply{
    int32 artistId = 1;
    string name = 2;
}